# anythingllm-document-sync

./: README.md  install.sh  pyproject.toml  requirements.txt
anythingllm_loader/: anythingllm_api.py  config.py  database.py
anythingllm_sync/: ingest_anythingllm_docs.py
