[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anythingllm-document-sync"
version = "0.1.0"
description = "Sync local documents to AnythingLLM workspaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "PyYAML",
    "pathspec>=0.12.0",
]

[project.scripts]
anythingllm-sync = "anythingllm_sync.ingest_anythingllm_docs:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["anythingllm_sync*", "anythingllm_loader*"]